--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,36 @@
-# Prerequisites
-*.d
+# ESP32 IDF Build Files
+build/
+sdkconfig
+sdkconfig.old
+*.pyc
+__pycache__/
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# IDE and Editor Files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
 
-# Precompiled Headers
-*.gch
-*.pch
+# Dependencies and Managed Components
+dependencies.lock
+managed_components/
 
-# Linker files
-*.ilk
+# Build artifacts
+*.bin
+*.elf
+*.map
 
-# Debugger Files
-*.pdb
+# Python virtual environments
+venv/
+.venv/
+env/
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# Logs and temporary files
+*.log
+logs/
 
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# debug information files
-*.dwo
+# Platform-specific
+Thumbs.db
+desktop.ini
